add header animation

--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -8,7 +8,7 @@ import Button from '~/components/ui/Button.astro';
 ---
 
 <!-- ============================================ --><!--                 Side By Side                 --><!-- ============================================ -->
-<WidgetWrapper>
+<WidgetWrapper id="about">
   <Fragment slot="bg">
     <div class="absolute inset-0 bg-white"></div>
   </Fragment>
