--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,6 +26,7 @@ const metadata = {
   <Hero2
     title="Toronto Balayage Specialist"
     tagline="a soft space for your transformation"
+    id="home"
   >
     <Fragment slot="content">
       <p class="intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade">
