--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,9 @@ import FAQs from '~/components/widgets/FAQs.astro';
 import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 import Button from '~/components/ui/Button.astro';
+import Services from '~/components/widgets/Services.astro';
+
+import Img1 from '~/assets/images/kathy-hero.jpeg';
 
 const metadata = {
   title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
@@ -51,6 +54,59 @@ const metadata = {
 
   <!-- About Widget -->
   <About />
+
+  <!-- Services Widget *************** -->
+
+  <Services
+    id="services"
+    tagline="Services"
+    title="Styles & Colours"
+    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022, 2023 and 2024."
+    items={[
+      {
+        title: 'Balayages',
+        description:
+          'A consultation will be held to discuss your desired look, and the total price will be provided before we begin your appointment.',
+        image: Img1,
+        price: 'starting from $440',
+        callToAction: {
+          text: 'Schedule an Appointment',
+          href: 'https://www.kathymach.com/appointments',
+          target: '_blank',
+        },
+      },
+      {
+        title: 'Ready-to-use Components',
+        description:
+          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
+        // icon: 'tabler:components',
+      },
+      {
+        title: 'Best Practices',
+        description:
+          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
+        // icon: 'tabler:list-check',
+      },
+      {
+        title: 'Excellent Page Speed',
+        description:
+          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
+        // icon: 'tabler:rocket',
+      },
+      {
+        title: 'Search Engine Optimization (SEO)',
+        description:
+          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
+        // icon: 'tabler:arrows-right-left',
+      },
+      {
+        title: 'Open to new ideas and contributions',
+        description:
+          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
+        // icon: 'tabler:bulb',
+      },
+    ]}
+  />
 
   <!-- Features Widget *************** -->
 
