--- a/src/components/ui/Headline.astro
+++ b/src/components/ui/Headline.astro
@@ -27,7 +27,7 @@ const {
       )}
       {title && (
         <h2
-          class={twMerge('font-bold leading-tighter tracking-tighter font-heading font-sans text-3xl', titleClass)}
+          class={twMerge('font-bold leading-tighter tracking-tighter font-heading text-3xl', titleClass)}
           set:html={title}
         />
       )}
