--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ const metadata = {
     classes={{ headline: { title: 'font-serif' } }}
     tagline="Services"
     title="Styles & Colours"
-    subtitle="A consultation will be held to discuss your desired look, and the total price will be provided before we begin your appointment. If you have any questions regarding our services, please don't hesitate to contact me."
+    subtitle="A consultation will be held to discuss your desired look, and the total price will be provided before we begin your appointment. If you have any questions regarding our services, please don't hesitate to <a class='text-primary transition-all duration-300 ease-in-out hover:text-black' href='/contact'>contact me.</a>"
     items={[
       {
         title: 'Balayages',
@@ -64,7 +64,7 @@ const metadata = {
         price: 'from $440+',
         callToAction: {
           text: 'Schedule an Appointment',
-          href: 'https://www.kathymach.com/appointments',
+          href: 'https://book.squareup.com/appointments/96phegsblrl7e1/location/LKF7J0AARRWD3?buttonTextColor=000000&color=f5f0ef&locale=en&referrer=so',
           target: '_blank',
         },
       },
