--- a/src/components/ui/Headline.astro
+++ b/src/components/ui/Headline.astro
@@ -11,7 +11,7 @@ const {
 
 const {
   container: containerClass = 'max-w-3xl',
-  title: titleClass = 'text-3xl md:text-4xl ',
+  title: titleClass = 'text-3xl md:text-4xl',
   subtitle: subtitleClass = 'text-xl',
 } = classes;
 ---
@@ -21,13 +21,16 @@ const {
     <div class={twMerge('mb-8 md:mx-auto md:mb-12 text-center', containerClass)}>
       {tagline && (
         <p
-          class="text-base text-secondary dark:text-blue-200 font-bold tracking-wide uppercase"
+          class="text-base text-primary font-bold tracking-widest uppercase"
           set:html={tagline}
         />
       )}
       {title && (
         <h2
-          class={twMerge('font-bold leading-tighter tracking-tighter font-heading text-3xl', titleClass)}
+          class={twMerge(
+            'font-bold leading-tighter tracking-tighter font-heading text-3xl md:text-4xl lg:text-5xl',
+            titleClass
+          )}
           set:html={title}
         />
       )}
