--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,11 @@ import Services from '~/components/widgets/Services.astro';
 
 // Service Images
 import HighContrastBlonde from '~/assets/images/services/high-contrast-blonde.jpg';
+import ColorCorrection from '~/assets/images/services/color-correction-2.jpg';
+import BaseColorToner from '~/assets/images/services/tone-base.jpg';
+import Highlights from '~/assets/images/services/highlights.jpg';
+import Haircut from '~/assets/images/services/haircut.jpg';
+import HairTreatment from '~/assets/images/services/hair-treatment.jpg';
 
 const metadata = {
   title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
@@ -71,7 +76,7 @@ const metadata = {
       {
         title: 'Toner/Base Color',
         description: 'Enhance or refine your color with a custom toner or base color.',
-        image: HighContrastBlonde,
+        image: BaseColorToner,
         price: 'starting from $120',
         callToAction: {
           text: 'Schedule an Appointment',
@@ -82,7 +87,7 @@ const metadata = {
       {
         title: 'Haircut',
         description: "Precision cuts tailored to your style, whether it's a trim or a full transformation.",
-        image: HighContrastBlonde,
+        image: Haircut,
         price: '$100',
         callToAction: {
           text: 'Schedule an Appointment',
@@ -93,7 +98,7 @@ const metadata = {
       {
         title: 'Partial Highlights',
         description: 'Perfect for adding dimension and brightness to the top section of your hair.',
-        image: HighContrastBlonde,
+        image: Highlights,
         price: 'starting from $300',
         callToAction: {
           text: 'Schedule an Appointment',
@@ -105,7 +110,7 @@ const metadata = {
         title: 'Color Correction',
         description:
           "Looking to fix previous color work or want a complete change? We'll assess your hair and provide a custom plan to get you to your desired color.",
-        image: HighContrastBlonde,
+        image: ColorCorrection,
         price: 'Price upon consultation',
         callToAction: {
           text: 'Schedule an Appointment',
@@ -116,7 +121,7 @@ const metadata = {
       {
         title: 'Hair Treatment',
         description: 'Nourishing treatments to restore health, shine, and hydration to your hair',
-        image: HighContrastBlonde,
+        image: HairTreatment,
         price: 'Add-on $50+',
         callToAction: {
           text: 'Schedule an Appointment',
