--- a/src/components/ui/ItemGridService.astro
+++ b/src/components/ui/ItemGridService.astro
@@ -34,13 +34,13 @@ const {
       )}
     >
       {items.map(({ title, price, description, image, callToAction, classes: itemClasses = {} }) => (
-        <div class="intersect-once motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade bg-white rounded-sm shadow-sm overflow-hidden">
-          <div class={twMerge('flex flex-row max-w-md gap-2', panelClass, itemClasses?.panel)}>
-            <div class="flex justify-center w-full">
+        <div class="intersect-once motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade bg-white rounded-sm shadow-sm overflow-hidden flex flex-col h-full">
+          <div class={twMerge('flex flex-col md:flex-row h-full', panelClass, itemClasses?.panel)}>
+            <div class="min-h-[200px] md:min-h-full md:min-w-[250px] md:w-1/3 relative">
               {image && (
                 <Image
                   src={image}
-                  class={twMerge('w-[500px] h-full mr-2 rtl:mr-0 rtl:ml-2', defaultImageClass, itemClasses?.image)}
+                  class={twMerge('absolute inset-0 w-full h-full object-cover', defaultImageClass, itemClasses?.image)}
                   alt="alt"
                   width={500}
                   height={1000}
@@ -48,7 +48,7 @@ const {
                 />
               )}
             </div>
-            <div class="mt-0.5 p-3">
+            <div class="p-4 flex flex-col flex-grow">
               {title && <h3 class={twMerge('text-xl font-bold', titleClass, itemClasses?.title)}>{title}</h3>}
               {price && (
                 <p
@@ -62,8 +62,9 @@ const {
                   set:html={description}
                 />
               )}
+              <div class="flex-grow" />
               {callToAction && (
-                <div class={twMerge(`${title || description ? 'mt-3' : ''}`, actionClass, itemClasses?.actionClass)}>
+                <div class={twMerge('mt-4', actionClass, itemClasses?.actionClass)}>
                   <Button
                     variant="link"
                     {...callToAction}
