--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -1,9 +1,8 @@
 ---
 import { Icon } from 'astro-icon/components';
-import { SITE } from 'astrowind:config';
-import { getHomePermalink } from '~/utils/permalinks';
 
 import Logo from '~/components/Logo.astro';
+import GoogleMaps from './GoogleMaps.astro';
 
 interface Link {
   text?: string;
@@ -37,78 +36,132 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
   <div
     class="relative max-w-7xl mx-auto px-4 sm:px-6 dark:text-slate-300 intersect-once intersect-quarter intercept-no-queue motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
   >
-    <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
-      <div class="col-span-12 lg:col-span-4">
-        <div class="mb-2">
-          <Logo />
+    <div class="pt-8 md:pt-12">
+      <!-- Logo at top by itself -->
+      <div class="mb-8">
+        <Logo />
+      </div>
+
+      <!-- Two column layout -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 pb-4 md:pb-10">
+        <!-- Column 1 - Google Maps + Additional Info -->
+        <div class="flex flex-col gap-6">
+          <!-- Google Maps -->
+          <div class="w-full h-fit rounded mb-6">
+            <GoogleMaps />
+          </div>
+
+          <!-- Info Sections -->
+          <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+            <!-- Opening Hours -->
+            <div>
+              <h3 class="font-bold mb-2 font-serif">Opening Hours</h3>
+              <ul class="text-sm">
+                <!-- <li class="mb-1">Monday - Friday: 9AM - 6PM</li> -->
+                <li class="mb-1">Saturday: 10AM - 4PM</li>
+                <!-- <li class="mb-1">Sunday: Closed</li> -->
+              </ul>
+            </div>
+
+            <!-- Contact Info -->
+            <div>
+              <h3 class="font-bold mb-2 font-serif">Contact Info</h3>
+              <ul class="text-sm">
+                <!-- <li class="mb-1">Phone: (555) 123-4567</li> -->
+                <li class="mb-1"><a href="mailto:beigebykat@gmail.com">beigebykat@gmail.com</a></li>
+              </ul>
+            </div>
+
+            <!-- Address -->
+            <div>
+              <h3 class="font-bold mb-2 font-serif">Address</h3>
+              <p class="text-sm">
+                651 Dupont St<br />
+                Toronto, Ontario M6G 1Z4
+                <br />
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="text-sm text-muted flex gap-1">
-          {
-            secondaryLinks.map(({ text, href }, index) => (
-              <>
-                {index !== 0 ? ' · ' : ''}
-                <a
-                  class="text-muted hover:text-gray-700 dark:text-gray-400 hover:underline transition duration-150 ease-in-out"
-                  href={href}
-                  set:html={text}
-                />
-              </>
-            ))
-          }
+
+        <!-- Column 2 - Directions -->
+        <div>
+          <h3 class="text-lg font-bold mb-4 md:text-xl font-serif">Directions</h3>
+          <p class="text-md font-bold text-primary">Bloor-Danforth Subway Line</p>
+          <ul class="mb-2 font-sans">
+            <li class="text-sm text-muted">1) Take the subway to Christie Station</li>
+            <li class="text-sm text-muted">
+              2) Walk north on Christie Street toward Crestfallen Lane (850m - 10 minute walk)
+            </li>
+            <li class="text-sm text-muted">3) Turn right on Dupont Street before you cross the light</li>
+            <li class="text-sm text-muted">
+              4) Walk past Stubbe Chocolates & Pastry and Lisa Dinh Hair Studio will be the next building! (28m - 1
+              minute walk)
+            </li>
+          </ul>
+          <p class="text-md font-bold text-primary">Yonge-University-Spadina Subway Line</p>
+          <ul class="mb-2">
+            <li class="text-sm text-muted">1) Take the subway to Dupont Station</li>
+            <li class="text-sm text-muted">
+              2) Walk west on Dupont Street toward Walmer Road (1,100m - 13 minute walk)
+            </li>
+            <li class="text-sm text-muted">3) The salon will be located on the south side of Dupont St.</li>
+            <li class="text-sm text-muted">
+              4) Walk past Roberts Art Gallery and Lisa Dinh Hair Studio will be the next building!
+            </li>
+          </ul>
+          <p class="text-md font-bold text-primary">Driving</p>
+          <ul class="mb-2">
+            <li class="text-sm text-muted">
+              1) We're located right at the intersection of Dupont Street and Christie Street, on the south-east side
+            </li>
+            <li class="text-sm text-muted">
+              2) Lisa Dinh Hair Studio is across from Loblaws and beside Stubbe Chocolates & Pastry.
+            </li>
+            <li class="text-sm text-muted">
+              3) There is metered street parking on Dupont Street ($2.00 per hour for a maximum of 3 hours between
+              9:00am to 4:00pm on Mon - Fri and 8:00am - 6:00pm on Sat) and Christie Street ($2.00 per hour for a
+              maximum of 3 hours between 8:00am to 9:00pm on Mon - Sat). There is also free parking across the street at
+              Loblaws (make sure you buy something!). The entrance to the Loblaws parking lot is on Dupont Street, east
+              of our salon
+            </li>
+          </ul>
         </div>
       </div>
-      {
-        links.map(({ title, links }) => (
-          <div class="col-span-6 md:col-span-3 lg:col-span-2">
-            <div class="dark:text-gray-300 font-medium mb-2">{title}</div>
-            {links && Array.isArray(links) && links.length > 0 && (
-              <ul class="text-sm">
-                {links.map(({ text, href, ariaLabel }) => (
-                  <li class="mb-2">
-                    <a
-                      class="text-muted hover:text-gray-700 hover:underline dark:text-gray-400 transition duration-150 ease-in-out"
-                      href={href}
-                      aria-label={ariaLabel}
-                    >
-                      <Fragment set:html={text} />
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            )}
-          </div>
-        ))
-      }
-    </div>
-    <div class="md:flex md:items-center md:justify-between py-6 md:py-8">
-      {
-        socialLinks?.length ? (
-          <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
-            {socialLinks.map(({ ariaLabel, href, text, icon }) => (
-              <li>
-                <a
-                  class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
-                  aria-label={ariaLabel}
-                  href={href}
-                >
-                  {icon && (
-                    <Icon
-                      name={icon}
-                      class="w-5 h-5"
-                    />
-                  )}
-                  <Fragment set:html={text} />
-                </a>
-              </li>
-            ))}
-          </ul>
-        ) : (
-          ''
-        )
-      }
 
-      <div class="text-sm mr-4 dark:text-muted">
-        <Fragment set:html={footNote} />
+      <!-- Social Links and Footer Note -->
+      <div
+        class="md:flex md:items-center md:justify-between py-6 md:py-8 border-t border-gray-200 dark:border-slate-800 mt-8"
+      >
+        {
+          socialLinks?.length ? (
+            <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
+              {socialLinks.map(({ ariaLabel, href, text, icon }) => (
+                <li>
+                  <a
+                    class="text-muted dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 inline-flex items-center"
+                    aria-label={ariaLabel}
+                    href={href}
+                  >
+                    {icon && (
+                      <Icon
+                        name={icon}
+                        class="w-5 h-5"
+                      />
+                    )}
+                    <Fragment set:html={text} />
+                  </a>
+                </li>
+              ))}
+            </ul>
+          ) : (
+            ''
+          )
+        }
+
+        <div class="text-sm mr-4 dark:text-muted">
+          <Fragment set:html={footNote} />
+        </div>
       </div>
     </div>
   </div>
