--- a/src/components/widgets/FAQs.astro
+++ b/src/components/widgets/FAQs.astro
@@ -28,6 +28,7 @@ const {
     title={title}
     subtitle={subtitle}
     tagline={tagline}
+    classes={classes?.headline as Record<string, string>}
   />
   <div class="flex flex-col gap-y-16">
     <AccordionGrid
