--- a/src/components/widgets/Hero2.astro
+++ b/src/components/widgets/Hero2.astro
@@ -32,7 +32,7 @@ const {
   <!-- ============================================ -->
 
   <WidgetWrapper>
-    <div class="flex gap-x-20 justify-evenly items-center">
+    <div class="flex flex-col lg:flex-row gap-y-10 gap-x-20 justify-evenly items-center">
       <div
         class="cs-content intersect-once intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
       >
@@ -54,7 +54,7 @@ const {
         alt="Kathy Mach"
         width="976"
         height="1600"
-        class="max-w-[488px] max-h-[800px] rounded-img intersect-once drop-shadow-2xl intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
+        class="w-[300px] sm:w-full max-w-[488px] max-h-[800px] rounded-img intersect-once drop-shadow-2xl intersect-quarter motion-safe:md:opacity-0 motion-safe:md:intersect:animate-fade"
       />
     </div>
   </WidgetWrapper>
@@ -126,7 +126,7 @@ const {
     }
     section .cs-title {
       /* 39px - 61px */
-      font-size: clamp(2.4375rem, 5vw, 3.8125rem);
+      font-size: clamp(2.25rem, 5vw, 3.8125rem);
       font-weight: lighter;
       line-height: 1.2em;
       text-align: center;
