--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ const metadata = {
     title="Frequently Asked Questions"
     tagline="FAQs"
     columns={2}
-    classes={{ container: 'max-w-6xl' }}
+    classes={{ headline: { title: 'font-serif' }, container: 'max-w-6xl' }}
     items={[
       {
         title: 'How can I prep for my hair appointment?',
